[gd_scene load_steps=10 format=3 uid="uid://cxd4h0hh6n80h"]

[ext_resource type="Script" uid="uid://qnwyioli2fxn" path="res://scenes/player/player.gd" id="1_lvxji"]
[ext_resource type="Texture2D" uid="uid://n3drxxqjtaut" path="res://assets/Jugador/Placeholder.png" id="2_p47bc"]
[ext_resource type="Texture2D" uid="uid://d5wx3slujs2w" path="res://assets/Objetos/Ardilla.png" id="3_75vfm"]
[ext_resource type="Texture2D" uid="uid://cce3xfbwdau3k" path="res://assets/Objetos/Gumball.png" id="4_0owmy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_71j4m"]
size = Vector3(0.65, 0.4, 0.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_4mrxx"]
viewport_path = NodePath("Overlays/SubViewport")

[sub_resource type="CanvasTexture" id="CanvasTexture_w7kh3"]
diffuse_texture = ExtResource("4_0owmy")

[sub_resource type="SpriteFrames" id="SpriteFrames_7r4gi"]
animations = [{
"frames": [],
"loop": true,
"name": &"Cansarse",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"ComerChicle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_75vfm")
}],
"loop": true,
"name": &"Correr",
"speed": 5.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_lvxji"]
viewport_path = NodePath("Overlays/TextureRect2/SubViewport")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_lvxji")
clamp_offset = 1.0

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("2_p47bc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_71j4m")

[node name="Overlays" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Overlays"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 63.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Overlays/VBoxContainer"]
layout_mode = 2
texture = SubResource("ViewportTexture_4mrxx")

[node name="HBoxContainer" type="HBoxContainer" parent="Overlays/VBoxContainer"]
layout_mode = 2

[node name="Ardillas" type="TextureRect" parent="Overlays/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_75vfm")
stretch_mode = 4

[node name="ArdillasCount" type="RichTextLabel" parent="Overlays/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = " X 0"
fit_content = true

[node name="Chicles" type="TextureRect" parent="Overlays/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("CanvasTexture_w7kh3")
stretch_mode = 4

[node name="ChiclesCount" type="RichTextLabel" parent="Overlays/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = " X 0"
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="Overlays/VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="Overlays"]
own_world_3d = true
size = Vector2i(192, 192)

[node name="Node3D" type="Node3D" parent="Overlays/SubViewport"]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Overlays/SubViewport/Node3D"]
sprite_frames = SubResource("SpriteFrames_7r4gi")
animation = &"Correr"

[node name="Camera3D" type="Camera3D" parent="Overlays/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="TextureRect2" type="TextureRect" parent="Overlays"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -192.0
offset_right = 192.0
grow_vertical = 0
texture = SubResource("ViewportTexture_lvxji")

[node name="SubViewport" type="SubViewport" parent="Overlays/TextureRect2"]
size = Vector2i(192, 192)

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
